Fix placement of data file.

--- a/docs/dirty_data.ipynb
+++ b/docs/dirty_data.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "import janitor\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pyprojroot import here"
    ]
   },
   {
@@ -48,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
+    "df = pd.read_excel(here() / \"data/dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -236,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
