--- a/incubator/medium_franchise.ipynb
+++ b/incubator/medium_franchise.ipynb
@@ -93,7 +93,10 @@
    "outputs": [],
    "source": [
     "fileurl = \"../data/medium_franchise_raw_table.csv\"  # originally from https://en.wikipedia.org/wiki/List_of_highest-grossing_media_franchises\n",
-    "df_raw = pd.read_csv(fileurl)\n",
+    "df_raw = pd.read_html(\n",
+    "    \"https://en.wikipedia.org/wiki/List_of_highest-grossing_media_franchises\"\n",
+    ")\n",
+    "df_raw = df_raw[0]\n",
     "df_raw.head(3)"
    ]
   },
@@ -690,10 +693,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
+  },
   "kernelspec": {
    "display_name": "PyJanitor development",
    "language": "python",
-   "name": "pyjanitor-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -705,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
