Ensure pyjanitor introduction notebook executes from top to bottom.

--- a/docs/pyjanitor_intro.ipynb
+++ b/docs/pyjanitor_intro.ipynb
@@ -144,7 +144,8 @@
    "source": [
     "import janitor\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pyprojroot import here"
    ]
   },
   {
@@ -160,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
+    "df = pd.read_excel(here() / \"data/dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -191,7 +192,7 @@
    "outputs": [],
    "source": [
     "cleaned_df = (\n",
-    "    pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
+    "    pd.read_excel(here() / \"data/dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "    .clean_names()\n",
     "    .remove_empty()\n",
     "    .rename_column(\"%_allocated\", \"percent_allocated\")\n",
@@ -229,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"dirty_data.xlsx\", engine=\"openpyxl\")\n",
+    "df = pd.read_excel(here() / \"data/dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
    ]
   },
@@ -415,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
