--- a/docs/normalize.ipynb
+++ b/docs/normalize.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "pyjanitor functions demonstrated here:\n",
     "\n",
-    "- [min_max_scale](../reference/functions.html#janitor.functions.min_max_scale)\n",
+    "- [min_max_scale](https://pyjanitor-devs.github.io/pyjanitor/api/functions/#janitor.functions.min_max_scale.min_max_scale)\n",
     "\n",
-    "- [transform_column](../reference/functions.html#janitor.functions.transform_column)"
+    "- [transform_columns](https://pyjanitor-devs.github.io/pyjanitor/api/functions/#janitor.functions.transform_columns.transform_columns)"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
