Get rid of two more notebook bad URLs.

--- a/docs/normalize.ipynb
+++ b/docs/normalize.ipynb
@@ -151,7 +151,7 @@
    "source": [
     "## [min-max normalization](https://en.wikipedia.org/wiki/Feature_scaling#Rescaling_\\(min-max_normalization\\))  \n",
     "\n",
-    "First we'll use pyjanitor's [min_max_scale](../reference/functions.html#janitor.functions.min_max_scale) to rescale the `mpg`, `disp_cc`, and `hp` columns in-place so that each value varies from 0 to 1."
+    "First we'll use pyjanitor's [min_max_scale](https://pyjanitor-devs.github.io/pyjanitor/api/functions/#janitor.functions.min_max_scale.min_max_scale) to rescale the `mpg`, `disp_cc`, and `hp` columns in-place so that each value varies from 0 to 1."
    ]
   },
   {
@@ -233,7 +233,7 @@
     "\n",
     "Next we'll convert to [standard scores](https://en.wikipedia.org/wiki/Standard_score).  This expresses each value in terms of its standard deviations from the mean, expressing where each model stands in relation to the others.\n",
     "\n",
-    "We'll use pyjanitor's [transform_columns](../reference/functions.html#janitor.functions.transform_columns) to apply the standard score calculation, `(x - x.mean()) / x.std()`, to each value in each of the columns we're evaluating."
+    "We'll use pyjanitor's [transform_columns](https://pyjanitor-devs.github.io/pyjanitor/api/functions/#janitor.functions.transform_columns.transform_columns) to apply the standard score calculation, `(x - x.mean()) / x.std()`, to each value in each of the columns we're evaluating."
    ]
   },
   {
