--- a/docs/dirty_data.ipynb
+++ b/docs/dirty_data.ipynb
@@ -32,8 +32,12 @@
    "outputs": [],
    "source": [
     "import janitor\n",
+    "import matplotlib.pyplot as plt\n",
+    "import missingno as mn\n",
     "import pandas as pd\n",
-    "from pyprojroot import here"
+    "from pyprojroot import here\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -51,6 +55,27 @@
    "source": [
     "df = pd.read_excel(here() / \"data/dirty_data.xlsx\", engine=\"openpyxl\")\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing the NaN Values\n",
+    "\n",
+    "Quickly visualizing the NaN values with the package `missingno` can help us see how dirty the data may be and if the NaN values have any relationships between columns. And as we will see later, it can also be used to visualize the improvement afforded by `pyjanitor`.\n",
+    "\n",
+    "\n",
+    "Here is the current visual state of the data (the right side of the chart gives a vertical line graph of min/max row information):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mn.matrix(df);"
    ]
   },
   {
@@ -215,8 +240,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Comparing the DataFrame Before and After `pyjanitor`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(15, 15))\n",
+    "\n",
+    "mn.matrix(df, ax=ax1, sparkline=False)\n",
+    "mn.matrix(df_clean, ax=ax2, sparkline=False)\n",
+    "\n",
+    "plt.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We have a cleaned dataframe!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -237,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
